# minhook

./: BpcPackage.cmake  BpcPackageDefaults.cmake  CMakeLists.txt  build_msvc.bat
bpc-package/: BpcCompiler.cmake  BpcPackage.cmake
